# Compression-Algorithm

./: .gitignore  CMakeLists.txt  Readme.md
Huffman Coding/: CMakeLists.txt  huff.c
app/: CMakeLists.txt  main-c.c
clib/: CMakeLists.txt  bitio.c  errhand.c  main-e.c
include/: bitio.h  errhand.h  main.h
